@@ -43,6 +43,7 @@ apt (0.9.3) UNRELEASED; urgency=low
     - ensure that we do init d only once and especially not with its own
       content as this causes some "interesting" hickups resulting in segfaults
       as it seems (Closes: #554387, #670979)
+    - collect zombie (de)compressor processes on reopen
   * apt-pkg/aptconfiguration.cc:
     - use NULL instead of "" for no (un)compress parameters
 
